tests/baselines/reference/typeOfThisInStaticMembers2.errors.txt
==== tests/cases/compiler/typeOfThisInStaticMembers2.ts (2 errors) ====
    class C {
        static foo = this; // error
                     ~~~~
!!! typeOfThisInStaticMembers2.ts(2,18): error TS2140: 'this' cannot be referenced in a static property initializer.
    }
    
    class C2<T> {
        static foo = this; // error
                     ~~~~
!!! typeOfThisInStaticMembers2.ts(6,18): error TS2140: 'this' cannot be referenced in a static property initializer.
    }